@@ -1,4 +1,4 @@
-rev 14-Jan_29-13_01
+rev 14-Feb_02-10_43
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -330,3 +330,6 @@ Add GD lib check for above
 
 29 Jan
 Fixed bug in extension recognition in image copy/paste (save.php)
+
+Feb 2
+Image copied from clipboard saved to namespace of page being edited
